IPT_C_GPU/logs/sparse/sparse_tests_3041618.log
===== IPT_C_GPU sparse CUDA tests =====
Sun Jun 21 14:27:43 CST 2026
gsn0
SLURM_JOB_ID=3041618
SLURM_JOB_NODELIST=gsn0
CUDA_VISIBLE_DEVICES=0
ROOT=/fs1/home/nudt_liujie/ftt/IPT_C_GPU
LOG_DIR=/fs1/home/nudt_liujie/ftt/IPT_C_GPU/logs/sparse
RESULTS_DIR=/fs1/home/nudt_liujie/ftt/IPT_C_GPU/results/sparse
Currently Loaded Modulefiles:
 1) GCC/12.2.0   2) CUDA/12.2  

nvcc: NVIDIA (R) Cuda compiler driver
Copyright (c) 2005-2023 NVIDIA Corporation
Built on Tue_Jun_13_19:16:58_PDT_2023
Cuda compilation tools, release 12.2, V12.2.91
Build cuda_12.2.r12.2/compiler.32965470_0

Sun Jun 21 14:27:43 2026       
+---------------------------------------------------------------------------------------+
| NVIDIA-SMI 535.104.12             Driver Version: 535.104.12   CUDA Version: 12.2     |
|-----------------------------------------+----------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |
|                                         |                      |               MIG M. |
|=========================================+======================+======================|
|   0  NVIDIA A100-SXM4-80GB          Off | 00000000:C7:00.0 Off |                    0 |
| N/A   28C    P0              59W / 400W |      4MiB / 81920MiB |      0%      Default |
|                                         |                      |             Disabled |
+-----------------------------------------+----------------------+----------------------+
                                                                                         
+---------------------------------------------------------------------------------------+
| Processes:                                                                            |
|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |
|        ID   ID                                                             Usage      |
|=======================================================================================|
|  No running processes found                                                           |
+---------------------------------------------------------------------------------------+

===== build =====
+ nvcc -O3 -std=c++14 -lineinfo /fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/runtests_sparse.cu -o /fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/runtests_sparse_cuda -lcublas
/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/../../src/ipt_cuda.cu(322): error: no instance of overloaded function "atomicAdd" matches the argument list
            argument types are: (double *, double)
              atomicAdd(&y[row + rhs_col * n], values[p] * x_value);
              ^

1 error detected in the compilation of "/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/runtests_sparse.cu".
+ set +x

===== run =====
/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/run_sparse_tests.sh: line 53: /fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/runtests_sparse_cuda: No such file or directory

===== output files =====
/fs1/home/nudt_liujie/ftt/IPT_C_GPU/logs/sparse:
total 12K
lrwxrwxrwx 1 nudt_liujie nudt_liujie   72 Jun 21 14:27 latest_sparse_tests.log -> /fs1/home/nudt_liujie/ftt/IPT_C_GPU/logs/sparse/sparse_tests_3041618.log
-rw-r--r-- 1 nudt_liujie nudt_liujie    0 Jun 21 14:27 sparse_tests_3041618.err
-rw-r--r-- 1 nudt_liujie nudt_liujie 3.1K Jun 21 14:27 sparse_tests_3041618.log
-rw-r--r-- 1 nudt_liujie nudt_liujie 3.1K Jun 21 14:27 sparse_tests_3041618.out

/fs1/home/nudt_liujie/ftt/IPT_C_GPU/results/sparse:
total 0
finished at: Sun Jun 21 14:27:51 CST 2026
